<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudBackAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_or_register">LoginOrRegisterActivity</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RePassword">Re type password</string>
    <string name="Email">Email</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_backup">BackupActivity</string>
    <string name="BackupSMS">Backup SMS</string>
    <string name="BackupContacts">Backup Contacts</string>
    <string name="title_activity_restore">RestoreActivity</string>
    <string name="RestoreContact">Restore Contact</string>
    <string name="RestoreSms">Restore Sms</string>
    <string name="BackupMultimedia">Backup Multimedia</string>
    <string name="title_activity_backup_multimedia">BackupMultimediaActivity</string>
    <string name="BackupImages">Backup Images</string>
    <string name="BackupVideos">Backup Videos</string>
    <string name="BackupMusic">Backup Music</string>
    <string name="BackupDCIM">Backup DCIM</string>
    <string name="BackupPictures">Backup Pictures</string>
    <string name="BackupMovies">Backup Movies</string>
    <string name="BackupDownloads">Backup Downloads</string>
    <string name="title_activity_backup_list">Backup List</string>
    <string name="RestoreMultimedia">Restore Multimedia</string>
    <string name="title_activity_restore_multimedia">RestoreMultimediaActivity</string>
    <string name="RestoreDCIM">Restore DCIM</string>
    <string name="RestorePictures">Restore Pictures</string>
    <string name="RestoreMusic">Restore Music</string>
    <string name="RestoreMovies">Restores Movies</string>
    <string name="RestoreDownloads">Restore Downloads</string>

</resources>
