<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/theme"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/SignUp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/EDITTEXT_REGISTER_USERNAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_name"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/Username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EDITTEXT_REGISTER_EMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EDITTEXT_REGISTER_USERNAME"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EDITTEXT_REGISTER_USERNAME"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EDITTEXT_REGISTER_PASSWORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EDITTEXT_REGISTER_EMAIL"
        android:layout_alignRight="@+id/EDITTEXT_REGISTER_EMAIL"
        android:layout_below="@+id/EDITTEXT_REGISTER_EMAIL"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EDITTEXT_REGISTER_RETYPE_PASSWORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EDITTEXT_REGISTER_PASSWORD"
        android:layout_alignRight="@+id/EDITTEXT_REGISTER_PASSWORD"
        android:layout_below="@+id/EDITTEXT_REGISTER_PASSWORD"
        android:ems="10"
        android:hint="@string/RePassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BUTTON_SELECT_RESTORE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EDITTEXT_REGISTER_RETYPE_PASSWORD"
        android:layout_alignRight="@+id/EDITTEXT_REGISTER_RETYPE_PASSWORD"
        android:layout_below="@+id/EDITTEXT_REGISTER_RETYPE_PASSWORD"
        android:hint="@string/Username"
        android:onClick="doRegister"
        android:text="@string/register" />

</RelativeLayout>