<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/theme"
    tools:context=".BackupMultimediaActivity" >

    <Button
        android:id="@+id/BUTTON_BACKUP_DCIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:onClick="doBackup"
        android:text="@string/BackupDCIM" />

    <Button
        android:id="@+id/BUTTON_BACKUP_PICTURES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_DCIM"
        android:layout_alignRight="@+id/BUTTON_BACKUP_DCIM"
        android:layout_below="@+id/BUTTON_BACKUP_DCIM"
        android:onClick="doBackup"
        android:text="@string/BackupPictures" />

    <Button
        android:id="@+id/BUTTON_BACKUP_MUSIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_PICTURES"
        android:layout_alignRight="@+id/BUTTON_BACKUP_PICTURES"
        android:layout_below="@+id/BUTTON_BACKUP_PICTURES"
        android:onClick="doBackup"
        android:text="@string/BackupMusic" />

    <Button
        android:id="@+id/BUTTON_BACKUP_MOVIES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_MUSIC"
        android:layout_alignRight="@+id/BUTTON_BACKUP_MUSIC"
        android:layout_below="@+id/BUTTON_BACKUP_MUSIC"
        android:onClick="doBackup"
        android:text="@string/BackupMovies" />

    <Button
        android:id="@+id/BUTTON_BACKUP_DOWNLOADS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_MOVIES"
        android:layout_alignRight="@+id/BUTTON_BACKUP_MOVIES"
        android:layout_below="@+id/BUTTON_BACKUP_MOVIES"
        android:onClick="doBackup"
        android:text="@string/BackupDownloads" />

</RelativeLayout>
