<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/theme"
    tools:context=".RestoreMultimediaActivity" >

    <Button
        android:id="@+id/BUTTON_RESTORE_DCIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92dp"
        android:onClick="doRestore"
        android:text="@string/RestoreDCIM" />

    <Button
        android:id="@+id/BUTTON_RESTORE_PICTURES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_DCIM"
        android:layout_alignRight="@+id/BUTTON_RESTORE_DCIM"
        android:layout_below="@+id/BUTTON_RESTORE_DCIM"
        android:onClick="doRestore"
        android:text="@string/RestorePictures" />

    <Button
        android:id="@+id/BUTTON_RESTORE_MUSIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_PICTURES"
        android:layout_alignRight="@+id/BUTTON_RESTORE_PICTURES"
        android:layout_below="@+id/BUTTON_RESTORE_PICTURES"
        android:onClick="doRestore"
        android:text="@string/RestoreMusic" />

    <Button
        android:id="@+id/BUTTON_RESTORE_MOVIES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_MUSIC"
        android:layout_alignRight="@+id/BUTTON_RESTORE_MUSIC"
        android:layout_below="@+id/BUTTON_RESTORE_MUSIC"
        android:onClick="doRestore"
        android:text="@string/RestoreMovies" />

    <Button
        android:id="@+id/BUTTON_RESTORE_DOWNLOADS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_MOVIES"
        android:layout_alignRight="@+id/BUTTON_RESTORE_MOVIES"
        android:layout_below="@+id/BUTTON_RESTORE_MOVIES"
        android:onClick="doRestore"
        android:text="@string/RestoreDownloads" />

</RelativeLayout>
