<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/theme"
    tools:context=".BackupActivity" >

    <Button
        android:id="@+id/BUTTON_BACKUP_SMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:onClick="backup"
        android:text="@string/BackupSMS" />

    <Button
        android:id="@+id/BUTTON_BACKUP_CONTACTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_SMS"
        android:layout_alignRight="@+id/BUTTON_BACKUP_SMS"
        android:layout_below="@+id/BUTTON_BACKUP_SMS"
        android:onClick="backup"
        android:text="@string/BackupContacts" />

    <Button
        android:id="@+id/BUTTON_BACKUP_MULTIMEDIA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_BACKUP_CONTACTS"
        android:layout_alignRight="@+id/BUTTON_BACKUP_CONTACTS"
        android:layout_below="@+id/BUTTON_BACKUP_CONTACTS"
        android:onClick="backup"
        android:text="@string/BackupMultimedia" />

</RelativeLayout>
