<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/theme"
    tools:context=".RestoreActivity" >

    <Button
        android:id="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="107dp"
        android:onClick="doOperation"
        android:text="@string/RestoreContact" />

    <Button
        android:id="@+id/BUTTON_RESTORE_SMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_alignRight="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_marginBottom="48dp"
        android:onClick="doOperation"
        android:text="@string/RestoreSms" />

    <Button
        android:id="@+id/BUTTON_RESTORE_MULTIMEDIA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_alignRight="@+id/BUTTON_RESTORE_CONTACT"
        android:layout_below="@+id/BUTTON_RESTORE_CONTACT"
        android:onClick="doOperation"
        android:text="@string/RestoreMultimedia" />

</RelativeLayout>
